--- a/feature/todayplan/src/main/res/values-in/strings.xml
+++ b/feature/todayplan/src/main/res/values-in/strings.xml
@@ -14,4 +14,5 @@
     <string name="todayplan_remove_from_schedule">Hapus dari jadwal</string>
     <string name="todayplan_mark_as_completed">Selesai</string>
     <string name="todayplan_today_tasks_completed">Tugas selesai!</string>
+    <string name="todayplan_change_username">Ganti nama</string>
 </resources>
