--- a/feature/todayplan/src/main/res/values/strings.xml
+++ b/feature/todayplan/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="todayplan_mark_as_completed">Mark as completed</string>
     <string name="todayplan_today_tasks_completed">Tasks complete!</string>
     <string name="todayplan_change_username">Change username</string>
+    <string name="todayplan_cancel">Cancel</string>
 </resources>
