--- a/feature/summaries/src/main/res/values/strings.xml
+++ b/feature/summaries/src/main/res/values/strings.xml
@@ -1,2 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="summaries_tasks_completed">Tasks completed</string>
+    <string name="summaries_summaries">Summaries</string>
+</resources>
