--- a/feature/summaries/src/main/res/values/strings.xml
+++ b/feature/summaries/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
 <resources>
     <string name="summaries_tasks_completed">Tasks completed</string>
     <string name="summaries_summaries">Summaries</string>
+    <string name="summaries_period">Period</string>
+    <string name="summaries_start_date">Start Date</string>
+    <string name="summaries_end_date">End Date</string>
+    <string name="summaries_day">Day</string>
+    <string name="summaries_week">Week</string>
+    <string name="summaries_month">Month</string>
 </resources>
