--- a/core/ui/src/main/res/values-in/strings.xml
+++ b/core/ui/src/main/res/values-in/strings.xml
@@ -10,4 +10,6 @@
     <string name="ui_completed">Selesai</string>
     <string name="ui_late">Terlambat</string>
     <string name="ui_not_completed">Tidak Selesai</string>
+    <string name="ui_summary_statistics">Statistik Ringkasan</string>
+    <string name="ui_task_type">Jenis Tugas</string>
 </resources>
