--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="ui_completed">Completed</string>
     <string name="ui_late">Late</string>
     <string name="ui_not_completed">Not Completed</string>
+    <string name="ui_summary_statistics">Summary Statistics</string>
+    <string name="ui_status" translatable="false">Status</string>
+    <string name="ui_task_type">Task Type</string>
 </resources>
