--- a/feature/analytics/src/main/res/values/strings.xml
+++ b/feature/analytics/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="analytics_tasks">Tasks</string>
     <string name="analytics_total_tasks">Total Tasks</string>
     <string name="analytics_assigned">Assigned</string>
+    <string name="analytics_assigned_tasks">Assigned Tasks</string>
+    <string name="analytics_day">Day</string>
+    <string name="analytics_week">Week</string>
+    <string name="analytics_month">Month</string>
+    <string name="analytics_tasks_size">%1$d tasks</string>
 </resources>
