--- a/feature/taskmanagement/src/main/res/values-in/strings.xml
+++ b/feature/taskmanagement/src/main/res/values-in/strings.xml
@@ -2,11 +2,7 @@
 <resources>
     <string name="taskmanagement_your_tasks">Tugas Kamu</string>
     <string name="taskmanagement_search_task">Cari tugas</string>
-    <string name="taskmanagement_today">Hari ini</string>
-    <string name="taskmanagement_weekly">Mingguan</string>
-    <string name="taskmanagement_monthly">Bulanan</string>
-    <string name="taskmanagement_daily">Harian</string>
-    <string name="taskmanagement_remove_from_plan">Singkirkan dari jadwal</string>
+    <string name="taskmanagement_remove_from_plan">Hapus dari jadwal</string>
     <string name="taskmanagement_delete_task">Hapus</string>
     <string name="taskmanagement_empty_tasks">Tidak Ada Tugas</string>
     <string name="taskmanagement_select_all">Pilih semua</string>
