feat(schedule): add date & task picker

--- a/feature/schedule/src/main/res/values-in/strings.xml
+++ b/feature/schedule/src/main/res/values-in/strings.xml
@@ -12,4 +12,7 @@
     <string name="schedule_cancel">Batal</string>
     <string name="schedule_choose">Pilih</string>
     <string name="schedule_choose_a_date">Pilih tanggal</string>
+    <string name="schedule_duration">Durasi</string>
+    <string name="schedule_add_task">Tambah tugas</string>
+    <string name="schedule_remove">Hapus</string>
 </resources>
