--- a/feature/schedule/src/main/res/values/strings.xml
+++ b/feature/schedule/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="schedule_cancel">Cancel</string>
     <string name="schedule_choose">Choose</string>
     <string name="schedule_choose_a_date">Choose a date</string>
+    <string name="schedule_duration">Duration</string>
+    <string name="schedule_add_task">Add task</string>
+    <string name="schedule_remove">Remove</string>
 </resources>
